New build for Kinsta

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,12 +1,11 @@
+<base href={import.meta.env.SITE}>
+<link rel="canonical" href={Astro.request.url}>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="author" content="Mike Alberts" />
-<meta
-  name="keywords"
-  content=""
+<meta name="keywords" content=""
 />
 <!-- Favicon guidelines generated with https://realfavicongenerator.net/ -->
 <link
