Fix broken blog link

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -73,10 +73,10 @@ const data2 = await getAllPages()
       }
         
        <a class="px-4 py-2 text-xs text-gray-500 hover:text-zinc-900 focus:outline-none focus:shadow-none focus:text-zinc-900/90"
-        href="blog">Blog</a>
+        href="/blog">Blog</a>
 
       <a class="flex items-center justify-center h-8 px-4 py-2 text-xs transition-all bg-white border border-gray-300 rounded-lg text-zinc-600 hover:text-zinc-500"
-        href="contact" role="button">
+        href="/contact" role="button">
         <span>Get Started</span>
       </a>
     </nav>
