--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -16,18 +16,18 @@ const { bgimage } = Astro.props
           >The Modern Web</span>
         <p
           class="mt-8 font-semibold lg:text-6xl tracking-tighter text-zinc-900">
-          A modern, fast, easily <span class="md:block text-zinc-500">
+          A modern, fast and easily <span class="md:block text-zinc-500">
             maintained web presence.</span
           >
         </p>
         <p class="max-w-md mt-4   text-zinc-500">
-          Mobile-responsive, highly interactive, cost-effective and highly available
+          Mobile-responsive, highly interactive, highly available and most importantly, extremely affordable.
         </p>
         <div class="flex flex-col items-center gap-3 mt-10 md:flex-row">
           <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto"
-            href="contact/">You Don't Have One?</a>
+            href="contact">You Don't Have One?</a>
           <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500"
-            href="services/">About our services &nbsp; →</a>
+            href="services">About our services &nbsp; →</a>
         </div>
       </div>
     </div>
