--- a/src/components/landing/Features.astro
+++ b/src/components/landing/Features.astro
@@ -9,14 +9,11 @@ import { features } from "../../data/features.json";
         >features</span
       >
       <p class="mt-8 text-4xl font-semibold tracking-tight text-zinc-900">
-        Embark on a journey through our podcasts,
-        <span class="md:block md:text-zinc-500">
-          and you'll find yourself thoroughly engrossed before you know it.</span
-        >
+        Enduring a troublesome website
+        <span class="md:block md:text-zinc-500"> is no longer the status quo.</span>
       </p>
       <p class="mt-4 text-base text-zinc-500">
-        Delve into captivating conversations and dive deep into the world of our
-        podcasts
+        Lean, mean selling machines for everyone!
       </p>
     </div>
 
