--- a/src/components/landing/Posts.astro
+++ b/src/components/landing/Posts.astro
@@ -5,7 +5,7 @@ const data = await getAllPosts();
 ---
 
 <section>
-    <ul class="grid md:grid-cols-3 gap-8">
+    <ul class="px-6 grid md:grid-cols-4 gap-8">
       {
         data.map((post) => (
           <Card
