--- a/src/components/landing/Testimonials.astro
+++ b/src/components/landing/Testimonials.astro
@@ -14,15 +14,13 @@
           <blockquote
             class="text-lg font-medium text-zinc-500 sm:text-2xl sm:leading-8">
             <p>
-              From the very first episode, I was hooked! The podcast's
-              captivating narratives and insightful discussions have expanded my
-              horizons and deepened my understanding of various subjects. It's
-              like having a knowledgeable friend sharing fascinating stories and
-              ideas. Truly a gem in the world of podcasts!
+              Anyone that knows how can have a blazing fast, attractive, secure and easy to manage 
+              website for less than $50 per YEAR. If you are not doing ecommerce and you are paying
+              $20-30 per month or more to host your website, you are getting ripped off.
             </p>
           </blockquote>
           <figcaption class="mt-6 text-base text-zinc-500">
-            <div class="font-semibold">Alex W.</div>
+            <div class="font-semibold">Mike A.</div>
             <div class="mt-1">CEO of Something</div>
           </figcaption>
         </figure>
