--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,13 +10,9 @@ import { getAllPosts } from "../lib/cosmic";
 import Posts from "../components/landing/Posts.astro";
 const data = await getAllPosts();
 ---
-
-<!---
-Use AstroSeo in all the pages you want different Seo than the index page
--->
 <AstroSeo
   title="Rule The Web | Home"
-  description="Your home page description goes here"
+  description="A completely functional Astro static site generator with Tailwind, AstroSEO, CosmicJS CMS for blog and page management."
   canonical={import.meta.env.SITE}
   openGraph={{
     url: "https://streamer.lexingtonthemes.com",
