Fixed posts converted from Markdown.

--- a/src/components/global/Block.astro
+++ b/src/components/global/Block.astro
@@ -13,10 +13,8 @@ const { bgimage, blockheadline, blockexcerpt } = Astro.props
       <div
         class="py-32 lg:pt-32 bg-gradient-to-r from-smoke via-smoke/80 h-full px-8 md:px-12 lg:px-32">
         <div class="text-left">
-          <span class="text-xs font-bold tracking-wide uppercase text-zinc-500"
-            >The Modern Web</span>
-          <p
-            class="mt-8 text-4xl font-semibold lg:text-6xl tracking-tighter text-zinc-900">
+          <span class="text-xs font-bold tracking-wide uppercase text-zinc-500">The Modern Web</span>
+          <p class="mt-8 text-4xl font-semibold lg:text-6xl tracking-tighter text-zinc-900">
             {blockheadline} <span class="md:block text-zinc-500"></span>
           </p>
           <p class="max-w-md mt-4 text-base text-zinc-500">
