--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -19,6 +19,7 @@ export async function getStaticPaths() {
 
 const { post } = Astro.props;
 
+//convert the Markdown to html
 const content = marked.parse(post.metadata.content);
 //const headline = marked.parse(post.title);
 ---
@@ -59,8 +60,30 @@ const content = marked.parse(post.metadata.content);
 <BaseLayout>
     <Block bgimage={post.metadata.cover_image.url}, blockheadline={post.title}, blockexcerpt={post.metadata.excerpt} />
     <section>
-        <div class="text-4xl text-base text-zinc-500 px-8 mx-auto md:px-12 lg:px-32 max-w-7xl pb-8">
+        <div class="tryit text-4xl text-base text-zinc-500 px-8 mx-auto md:px-12 lg:px-32 max-w-7xl pb-8">
             <Fragment class="text-base text-zinc-500" set:html={content} />
         </div>
     </section>
   </BaseLayout>
+
+  <style is:global>
+    p {
+      @apply text-base text-zinc-500;
+    }
+    img {
+      @apply my-10 h-auto max-w-md rounded-lg shadow-xl dark:shadow-gray-800;
+    }      
+    h2 {
+      @apply text-4xl font-semibold tracking-tighter text-zinc-900;
+    }
+    </style>
+
+    <style is:inline>
+    h2{
+    font-size: 2rem;
+    margin-top: 2rem;}
+
+    p{
+    margin-top: 2rem;} 
+</style>
+
