Fix broken image on post page.

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -71,7 +71,7 @@ const content = marked.parse(post.metadata.content);
       @apply text-base text-zinc-500;
     }
     img {
-      @apply my-10 h-auto max-w-md rounded-lg shadow-xl dark:shadow-gray-800;
+      @apply my-10 h-auto rounded-lg shadow-xl dark:shadow-gray-800;
     }      
     h2 {
       @apply text-4xl font-semibold tracking-tighter text-zinc-900;
@@ -84,6 +84,11 @@ const content = marked.parse(post.metadata.content);
     margin-top: 2rem;}
 
     p{
-    margin-top: 2rem;} 
+    margin-top: 2rem;}
+    
+    .tryit > * img {
+      max-width: 50%;
+      display: inline;
+    }
 </style>
 
