--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -89,6 +89,7 @@ const content = marked.parse(post.metadata.content);
     .tryit > * img {
       max-width: 50%;
       display: inline;
+      float: right;
     }
 </style>
 
