Finally fixed pics right.

--- a/src/components/global/Block.astro
+++ b/src/components/global/Block.astro
@@ -22,7 +22,7 @@ const { bgimage, blockheadline, blockexcerpt } = Astro.props
           </p>
           <div class="flex flex-col items-center gap-3 mt-10 md:flex-row">
             <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto"
-              href="contact/">You Don't Have One?</a>
+              href="articles/">Read Articles Here</a>
             <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500"
               href="services/">About our services &nbsp; →</a>
           </div>
