--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -71,7 +71,7 @@ const content = marked.parse(post.metadata.content);
       @apply text-base text-zinc-500;
     }
     img {
-      @apply mt-0 pb-8 h-auto rounded-lg shadow-xl dark:shadow-gray-800;
+      @apply mx-2 mb-2 h-auto rounded-lg shadow-lg dark:shadow-gray-800;
     }      
     h2 {
       @apply text-4xl font-semibold tracking-tighter text-zinc-900;
@@ -87,7 +87,7 @@ const content = marked.parse(post.metadata.content);
     margin-top: 2rem;}
     
     .tryit > * img {
-      max-width: 50%;
+      max-width: 40%;
       float: right;
     }
 </style>
