--- a/src/components/global/Block.astro
+++ b/src/components/global/Block.astro
@@ -1,7 +1,6 @@
 ---
 const { bgimage, blockheadline, blockexcerpt } = Astro.props
 ---
-
 <section>
     <div class="relative isolate overflow-hidden max-w-7xl mx-auto">
       <img
@@ -10,8 +9,7 @@ const { bgimage, blockheadline, blockexcerpt } = Astro.props
         class="absolute inset-0 -z-10 h-full w-full object-cover opacity-30"
       />
   
-      <div
-        class="py-32 lg:pt-32 bg-gradient-to-r from-smoke via-smoke/80 h-full px-8 md:px-12 lg:px-32">
+      <div class="py-32 lg:pt-32 bg-gradient-to-r from-smoke via-smoke/80 h-full px-8 md:px-12 lg:px-32">
         <div class="text-left">
           <span class="text-xs font-bold tracking-wide uppercase text-zinc-500">The Modern Web</span>
           <p class="mt-8 text-4xl font-semibold lg:text-6xl tracking-tighter text-zinc-900">
@@ -24,7 +22,7 @@ const { bgimage, blockheadline, blockexcerpt } = Astro.props
             <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto"
               href="articles/">Read Articles Here</a>
             <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500"
-              href="services/">About our services &nbsp; →</a>
+              href="services/">About our services &nbsp;→</a>
           </div>
         </div>
       </div>
