--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -43,7 +43,7 @@ const data = await getAllPosts();
   }}
 />
 <BaseLayout>
-    <Block bgimage="photo-15.jpg" blockheadline="No technical mumbo jumbo here" blockexcerpt="Some quick tips and tricks to increase your website know how." />
+    <Block bgimage="photo-15.jpg" blockheadline="No technical mumbo jumbo here" blockexcerpt="Just some quick tips and tricks to increase your website know how." />
     <Posts />
     <Testimonials />
 </BaseLayout>
