--- a/src/components/global/Card.astro
+++ b/src/components/global/Card.astro
@@ -1,6 +1,7 @@
 ---
 const { href, title, body, image } = Astro.props
 ---
+<!--
 <li class="bg-white rounded-md shadow-md hover:shadow-xl transition">
   <a href={`/blog/${href}`}>
     <div class="flex flex-col h-full gap-y-2 p-6">
@@ -14,3 +15,28 @@ const { href, title, body, image } = Astro.props
     </div>
   </a>
 </li>
+-->
+<div class="mb-0">
+  <div
+    class="ring-1 ring-zinc-300 relative block rounded-lg bg-white shadow-xl hover:shadow-md transition dark:bg-zinc-100">
+    <div class="flex">
+      <div
+        class="relative mx-4 -mt-4 overflow-hidden rounded-lg bg-cover bg-no-repeat shadow-lg dark:shadow-black/20"
+        data-te-ripple-init data-te-ripple-color="light">
+        <img src={image} class="w-full" />
+        <a href={`/blog/${href}`}>
+          <div
+            class="absolute top-0 right-0 bottom-0 left-0 h-full w-full overflow-hidden bg-fixed opacity-400 transition duration-300 ease-in-out hover:opacity-0 bg-[hsla(0,0%,98.4%,.15)]">
+          </div>
+        </a>
+      </div>
+    </div>
+<div class="p-6">
+  <h5 class="mb-3 font-semibold text-xl">{title}</h5>
+  <p class="mb-4 pb-2 text-zinc-500">
+    {body}
+  </p>
+  <a href={`/blog/${href}`} data-te-ripple-init data-te-ripple-color="light"
+    class="flex items-center justify-center xl:w-1/2 h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:font-semibold text-zinc-600 hover:text-zinc-500">Read
+    more&nbsp;→</a>
+</div>
