--- a/src/components/global/NavLink.astro
+++ b/src/components/global/NavLink.astro
@@ -1,4 +1,4 @@
 ---
-const { href, title, body } = Astro.props
+const { href, title } = Astro.props
 ---
-<a class="px-4 py-2 text-xs text-gray-500 hover:text-zinc-900 focus:outline-none focus:shadow-none focus:text-zinc-900/90" href={`${href}`}>{title}</a>
+<a id={href} class="px-4 py-2 text-xs text-gray-500 hover:text-zinc-900 focus:outline-none focus:shadow-none focus:text-zinc-900/90" href={`${href}`}>{title}</a>
