--- a/src/components/landing/Testimonials.astro
+++ b/src/components/landing/Testimonials.astro
@@ -16,7 +16,7 @@
             <p>
               Anyone that knows how can have a blazing fast, attractive, secure and easy to manage 
               website for less than $50 per YEAR. If you are not doing ecommerce and you are paying
-              $20-30 per month or more to host your website, you are getting ripped off.
+              $20-30 per month or more to host a low traffic website, you are getting ripped off.
             </p>
           </blockquote>
           <figcaption class="mt-6 text-base text-zinc-500">
