--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -60,7 +60,7 @@ const content = marked.parse(post.metadata.content);
 <BaseLayout>
     <Block bgimage={post.metadata.cover_image.url}, blockheadline={post.title}, blockexcerpt={post.metadata.excerpt} />
     <section>
-        <div class="tryit text-4xl text-base text-zinc-500 px-8 mx-auto md:px-12 lg:px-32 max-w-7xl pb-8">
+        <div class="tryit text-base text-zinc-500 px-8 mx-auto md:px-12 lg:px-32 max-w-7xl pb-8">
             <Fragment set:html={content} />
         </div>
     </section>
@@ -69,9 +69,6 @@ const content = marked.parse(post.metadata.content);
   <style is:global>
     p {
       @apply text-base text-zinc-500;
-    }
-    img {
-      @apply mx-2 mb-2 h-auto rounded-lg shadow-lg dark:shadow-gray-800;
     }      
     h2 {
       @apply text-4xl font-semibold tracking-tighter text-zinc-900;
@@ -81,7 +78,12 @@ const content = marked.parse(post.metadata.content);
     <style is:inline>
     h2{
     font-size: 2rem;
-    margin-top: 2rem;}
+    margin-top: 2rem;
+  }
+
+  img {
+      @apply mx-2 mb-2 h-auto rounded-lg shadow-lg dark:shadow-gray-800;
+    }
 
     p{
     margin-top: 2rem;}
