--- a/src/components/landing/Articles.astro
+++ b/src/components/landing/Articles.astro
@@ -5,7 +5,11 @@ const data = await getAllArticles();
 const type = 'articles';
 ---
 <section class="mb-10">
-    <ul class="px-6 grid md:grid-cols-4 gap-8">
+  <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-7xl lg:py-24">
+    <div class="max-w-3xl"
+    <p class="text-xs font-bold tracking-wide uppercase text-zinc-500">articles</p>
+    </div>
+    <ul class="px-6 grid md:grid-cols-3 gap-6">
       {
         data.map((article) => (
           <Card
@@ -18,4 +22,5 @@ const type = 'articles';
         ))
       }
     </ul>
+  </div>
   </section>
