--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import { getAllPages } from "../lib/cosmic"
+import { AstroSeo } from "@astrolib/seo";
 
 export async function getStaticPaths() {
   const response = await getAllPages()
@@ -14,6 +15,39 @@ export async function getStaticPaths() {
 }
 const { page } = Astro.props;
 ---
+<AstroSeo
+  title={page.title}
+  description={page.metadata.page_meta.page_description}
+  openGraph={{
+    url: "https://streamer.lexingtonthemes.com",
+    title: "Open Graph Title",
+    description: "Open Graph Description",
+    images: [
+      {
+        url: "https://www.lexingtonthemes.com/opengraph/social-og.jpg",
+        width: 1200,
+        height: 630,
+        alt: "Social open graph",
+        type: "image/jpeg",
+      },
+      {
+        url: "https://www.lexingtonthemes.com/opengraph/twitter-og.jpg",
+        width: 4096,
+        height: 4096,
+        alt: "Twitter open graph",
+        type: "image/jpeg",
+      },
+      { url: "https://www.lexingtonthemes.com/opengraph/social-og.jpg" },
+      { url: "https://www.lexingtonthemes.com/opengraph/twitter-og.jpg" },
+    ],
+    site_name: "Rule The Web",
+  }}
+  twitter={{
+    handle: "@TwitterHandle",
+    site: "@site",
+    cardType: "summary_large_image",
+  }}
+/>
 <BaseLayout>
     <Fragment set:html={page.metadata.page_content} />
   </BaseLayout>
