A few CSS tweaks

--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -1,4 +1,4 @@
-<footer class="bg-zinc-200">
+<footer class="bg-zinc-200 ring-1 ring-zinc-300">
   <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-7xl lg:py-12">
     <div class="xl:grid xl:grid-cols-3 xl:gap-8 items-start">
       <div class="inline-flex items-center gap-3 text-xl font-bold tracking-tight text-zinc-900">
