--- a/src/components/landing/Articles.astro
+++ b/src/components/landing/Articles.astro
@@ -4,12 +4,11 @@ import Card from "../../components/global/Card.astro";
 const data = await getAllArticles();
 const type = 'articles';
 ---
-<section class="mb-10">
-  <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-7xl lg:py-24">
-    <div class="max-w-3xl"
-    <p class="text-xs font-bold tracking-wide uppercase text-zinc-500">articles</p>
-    </div>
-    <ul class="px-6 grid md:grid-cols-3 gap-6">
+<section class="bg-zinc-200 mb-10 ring-1 ring-zinc-300">
+  <div class="py-6 mx-6 lg:py-8">
+    <p class="text-xs font-bold tracking-wide uppercase text-zinc-500">latest articles</p>
+  </div> 
+    <ul class="px-6 pb-6 grid md:grid-cols-4 gap-8">
       {
         data.map((article) => (
           <Card
@@ -22,5 +21,4 @@ const type = 'articles';
         ))
       }
     </ul>
-  </div>
   </section>
