Bug fixes, file organizing.

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -6,7 +6,7 @@ const data2 = await getAllPages()
 <div class="sticky top-0 z-40 justify-center w-full mx-auto bg-smoke border-b">
   <div x-data="{ open: false }" class="flex flex-col w-full px-8 py-3 mx-auto md:px-12 md:items-center md:justify-between md:flex-row lg:px-32 max-w-7xl">
     <div class="flex flex-row items-center justify-between">
-      <a class="inline-flex items-center gap-0" href="/"><img src="logo3.png" /></a>
+      <a class="inline-flex items-center gap-0" href="/"><img src="img/logo3.png" /></a>
       <button
         class="rounded-lg md:hidden focus:outline-none focus:shadow-outline"
         @click="open = !open">
