--- a/src/components/landing/Features.astro
+++ b/src/components/landing/Features.astro
@@ -5,16 +5,12 @@ import { features } from "../../data/features.json";
 <section>
   <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-7xl lg:py-24">
     <div class="max-w-3xl">
-      <span class="text-xs font-bold tracking-wide uppercase text-zinc-500"
-        >features</span
-      >
+      <span class="text-xs font-bold tracking-wide uppercase text-zinc-500">features</span>
       <p class="mt-8 text-4xl font-semibold tracking-tight text-zinc-900">
         Enduring a troublesome website
         <span class="md:block md:text-zinc-500"> is no longer the status quo.</span>
       </p>
-      <p class="mt-4 text-base text-zinc-500">
-        Lean, mean selling machines for everyone!
-      </p>
+      <p class="mt-4 text-base text-zinc-500">Lean, mean selling machines for everyone!</p>
     </div>
 
     <ol
