--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -1,15 +1,10 @@
 <section>
   <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-6xl lg:py-12">
     <div class="max-w-3xl lg:text-center lg:mx-auto">
-      <span class="text-xs font-bold tracking-wide uppercase text-zinc-500"
-        >Pricing</span
+      <span class="text-xs font-bold tracking-wide uppercase text-zinc-500">Pricing</span
       >
-      <p class="mt-8 text-4xl font-semibold tracking-tight text-zinc-900">
-        Choose your perfect plan
-      </p>
-      <p class="mt-4 text-base text-zinc-500">
-        explore our flexible pricing options tailored to your needs
-      </p>
+      <p class="mt-8 text-4xl font-semibold tracking-tight text-zinc-900">Choose your perfect plan</p>
+      <p class="mt-4 text-base text-zinc-500">explore our flexible pricing options tailored to your needs</p>
     </div>
     <div
       class="grid max-w-2xl grid-cols-1 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-3 xl:gap-x-6 mt-12 lg:mt-24">
@@ -19,9 +14,7 @@
           Casual listeners and newcomers who want access to the podcast's core
           content.
         </p>
-        <p class="text-3xl mt-4 font-light tracking-tight text-black">
-          $9/month
-        </p>
+        <p class="text-3xl mt-4 font-light tracking-tight text-black">$9/month</p>
         <ul
           role="list"
           class="flex flex-col order-last mt-10 text-sm text-gray-500 gap-y-3">
@@ -132,9 +125,7 @@
           Regular listeners who want early access to episodes and exclusive
           content, making their experience more enriched.
         </p>
-        <p class="text-3xl mt-4 font-light tracking-tight text-white">
-          $19/month
-        </p>
+        <p class="text-3xl mt-4 font-light tracking-tight text-white">$19/month</p>
         <ul
           role="list"
           class="flex flex-col order-last mt-10 text-sm text-white gap-y-3">
