--- a/src/components/landing/Testimonials.astro
+++ b/src/components/landing/Testimonials.astro
@@ -4,7 +4,7 @@
       class="relative overflow-hidden bg-smoke ring-1 ring-zinc-300 px-6 py-20 rounded-3xl sm:px-10 sm:py-24 md:px-12 lg:px-20">
       <img
         class="absolute inset-0 h-full w-full object-cover brightness-150 saturate-0"
-        src="newhero.jpg"
+        src="img/newhero.jpg"
         alt=""
       />
       <div class="absolute inset-0 bg-smoke/90"></div>
