--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -4,7 +4,7 @@ const {bgimage} = Astro.props
 <section>
   <div class="relative isolate overflow-hidden max-w-7xl mx-auto">
     <img
-      src={`${bgimage}`}
+      src={`img/${bgimage}`}
       alt="Welcome To Rule The Web"
       class="absolute inset-0 -z-10 h-full w-full object-cover opacity-30"
     />
