--- a/src/components/global/Block.astro
+++ b/src/components/global/Block.astro
@@ -9,7 +9,7 @@ const { bgimage, blockheadline, blockexcerpt } = Astro.props
         class="absolute inset-0 -z-10 h-full w-full object-cover opacity-30"
       />
   
-      <div class="py-32 lg:pt-32 bg-gradient-to-r from-smoke via-smoke/80 h-full px-8 md:px-12 lg:px-32">
+      <div class="py-9 md:pt-12 lg:py-24 h-full px-8 md:px-12 lg:px-32 bg-gradient-to-r from-smoke via-smoke/80">
         <div class="text-left">
           <span class="text-xs font-bold tracking-wide uppercase text-zinc-500">The Modern Web</span>
           <p class="mt-8 text-4xl font-semibold lg:text-6xl tracking-tighter text-zinc-900">
