--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 
+<meta charset="utf-8" />
 <base href={import.meta.env.SITE}>
 <link rel="canonical" href={Astro.request.url}>
-<meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,22 +10,22 @@
 <link
   rel="apple-touch-icon"
   sizes="180x180"
-  href="/favicons/apple-touch-icon.png"
+  href="favicons/apple-touch-icon.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="32x32"
-  href="/favicons/favicon-32x32.png"
+  href="favicons/favicon-32x32.png"
 />
 <link
   rel="icon"
   type="image/png"
   sizes="16x16"
-  href="/favicons/favicon-16x16.png"
+  href="favicons/favicon-16x16.png"
 />
-<link rel="manifest" href="/favicons/site.webmanifest" />
-<link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#000000" />
+<link rel="manifest" href="favicons/site.webmanifest" />
+<link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#000000" />
 <meta name="msapplication-TileColor" content="#000000" />
 <meta name="theme-color" content="#000000" />
 
