--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -2,22 +2,24 @@
   <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-7xl lg:py-12">
     <div class="xl:grid xl:grid-cols-3 xl:gap-8 items-start">
       <div class="inline-flex items-center gap-3 text-xl font-bold tracking-tight text-zinc-900">
-        <a class="inline-flex items-center gap-0" href="/"><img src="img/logo2.png" /></a>
+        <a class="inline-flex items-center gap-0" href="/"><img src="img/logo.png" /></a>
       </div>
       <div class="gap-8 xl:col-span-2 lg:ml-auto">
         <div class="md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-8 lg:gap-20">
+          
           <div class="mt-12 md:mt-0">
-            <h3 class="text-zinc-900 text-base font-medium">Column One</h3>
+            <h3 class="text-zinc-900 text-base font-medium">Company</h3>
             <ul role="list" class="mt-4 text-xs space-y-2">
-              <li><a href="#" class="text-zinc-600 hover:text-zinc-900">A link</a></li>
+              <li><a href="/about" class="text-zinc-600 hover:text-zinc-900">About</a></li>
+              <li><a href="/services" class="text-zinc-600 hover:text-zinc-900">Services</a></li>
             </ul>
           </div>
 
-          <div>
-            <h3 class="text-zinc-900 text-base font-medium">Column Two</h3>
+          <div class="mt-12 md:mt-0">
+            <h3 class="text-zinc-900 text-base font-medium">Content</h3>
             <ul role="list" class="mt-4 text-xs space-y-2">
-              <li><a href="#" class="text-zinc-600 hover:text-zinc-500">a Link</a></li>
-              <li><a href="#" class="text-zinc-600 hover:text-zinc-900">A Link</a></li>
+              <li><a href="/blog" class="text-zinc-600 hover:text-zinc-500">Blog</a></li>
+              <li><a href="/articles" class="text-zinc-600 hover:text-zinc-900">Articles</a></li>
             </ul>
           </div>
           <div class="mt-12 md:mt-0">
@@ -28,24 +30,22 @@
             </ul>
           </div>
           <div class="mt-12 md:mt-0">
-            <h3 class="text-zinc-900 text-base font-medium">Column Four</h3>
+            <h3 class="text-zinc-900 text-base font-medium">Contact</h3>
             <ul role="list" class="mt-4 text-xs space-y-2">
-              <li><a href="#" class="text-zinc-600 hover:text-zinc-900">A Link</a></li>
+              <li><a href="#" class="text-zinc-600 hover:text-zinc-900">Send A Message</a></li>
+              <li><a href="#" class="text-zinc-600 hover:text-zinc-900">Book A Call</a></li>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <nav class="pt-12 flex flex-col lg:flex-row gap-8">
+    <nav class="pt-12 flex flex-col lg:flex-row gap-8 items-center">
       <span class="text-xs text-zinc-600">© 2023 Rule The Web LLC</span>
       <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-xs text-zinc-600 transition-colors delay-150 hover:delay-[0ms] hover:bg-mirage"
         href="/#process"><span class="relative z-10">Terms of use</span></a>
   
       <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-xs text-zinc-600 transition-colors delay-150 hover:delay-[0ms] hover:bg-mirage"
         href="/#benefits"><span class="relative z-10">Privacy policy</span></a>
-      
-      <a class="relative -my-2 -mx-3 rounded-lg px-3 py-2 text-xs text-zinc-600 transition-colors delay-150 hover:delay-[0ms] hover:bg-mirage"
-        href="/#pricing"><span class="relative z-10">Privacy policy</span></a>
     </nav>
   </div>
 </footer>
