--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,8 +1,8 @@
 ---
 const {bgimage} = Astro.props
 ---
-<section>
-  <div class="relative isolate overflow-hidden max-w-7xl mx-auto">
+<!-- hero -->
+  <div class="relative isolate max-w-7xl mx-auto">
     <img
       src={`img/${bgimage}`}
       alt="Welcome To Rule The Web"
@@ -10,25 +10,51 @@ const {bgimage} = Astro.props
     />
 
     <div
-      class="py-32 lg:pt-32 bg-gradient-to-r from-smoke via-smoke/80 h-full px-8 md:px-12 lg:px-32">
-      <div class="text-left">
+      class="py-9 md:pt-12 lg:py-24 h-full px-8 md:px-12 lg:px-32 bg-gradient-to-r from-smoke via-smoke/80">
+      <div x-data="{ 'showModal': false }" @keydown.escape="showModal = false" class="text-left">
         <span class="text-xs font-bold tracking-wide uppercase text-zinc-500">The Modern Web</span>
-        <p
-          class="mt-8 text-4xl font-semibold lg:text-6xl tracking-tighter text-zinc-900">
-          A modern, fast and easily <span class="md:block text-zinc-500">
-            maintained web presence.</span
-          >
+        <p class="mt-8 text-4xl font-semibold lg:text-6xl tracking-tighter text-zinc-900">
+          A modern, fast and easily <span class="md:block text-zinc-500">maintained web presence.</span>
         </p>
-        <p class="max-w-md mt-4   text-zinc-500">
+        <p class="max-w-md mt-4 text-zinc-500">
           Mobile-responsive, highly interactive, highly available and most importantly, extremely affordable.
         </p>
         <div class="flex flex-col items-center gap-3 mt-10 md:flex-row">
-          <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto"
-            href="contact">You Don't Have One?</a>
-          <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500"
-            href="services">About our services &nbsp; →</a>
+          <script id="setmore_script" type="text/javascript" src="https://my.setmore.com/webapp/js/src/others/setmore_iframe.js"></script>
+          <a id="Setmore_button_iframe" style="float:none" href="https://booking.setmore.com/scheduleappointment/cf2efb8d-73c7-4d6c-97c6-5b0729e6d397" class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto">Book A Call</a>
+          <a @click="showModal = true" class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500" href="javascript:;">Send A Message &nbsp; →</a>
         </div>
+        
+        <!-- Modal -->
+        <div class="p-0 m-0 fixed inset-0 flex items-center justify-center overflow-auto bg-black bg-opacity-50"
+        x-show="showModal" style="display: none;">
+        
+        <!-- Modal inner -->
+        <div
+        class="w-full h-full sm:w-1/2 med:w-1/3 px-0 py-0 mx-auto text-left bg-white rounded"
+        @click.away="showModal = false"
+        x-transition:enter="motion-safe:ease-out duration-300"
+        x-transition:enter-start="opacity-0 scale-90"
+        x-transition:enter-end="opacity-100 scale-100">
+
+        <!-- Title / Close-->
+        <div class="py-1 flex items-center justify-between">
+            <h5 class="mx-3 text-black max-w-none">Contact Us</h5>
+
+            <button type="button" class="flex items-center justify-center p-0 text-sm font-semibold text-white transition-all rounded-md bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto z-50 cursor-pointer mr-1" @click="showModal = false">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                </svg>
+            </button>
+        </div>
+
+        <!-- content -->
+        <div class=" h-screen p-0 m-0 text-zinc-500 text-xs">
+          <iframe aria-label='Contact Form' style="height:400px; width:99%; border:none;" src='https://forms.zohopublic.com/administrator81/form/ProductReview/formperma/1SLy2_XE9PEXvFojgtAmiTZT6dLJ5GYdQ61n5p6RFKw'></iframe>
+        </div>
+    </div>
+</div>
       </div>
     </div>
   </div>
-</section>
+<!-- end hero -->
