Fixed Hero and cosmetic tweaks.

--- a/src/components/global/Card.astro
+++ b/src/components/global/Card.astro
@@ -20,5 +20,5 @@ const { href, title, body, image, type } = Astro.props
   </p>
   <a href={`/${type}/${href}`} data-te-ripple-init data-te-ripple-color="light"
     class="flex items-center justify-center xl:w-1/2 h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:font-semibold text-zinc-600 hover:text-zinc-500">
-    Read more&nbsp;→</a>
+    Read more</a>
 </div>
