--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -10,16 +10,16 @@
           <div class="mt-12 md:mt-0">
             <h3 class="text-zinc-900 text-base font-medium">Company</h3>
             <ul role="list" class="mt-4 text-xs space-y-2">
-              <li><a href="/about" class="text-zinc-600 hover:text-zinc-900">About</a></li>
-              <li><a href="/services" class="text-zinc-600 hover:text-zinc-900">Services</a></li>
+              <li><a href="/about/" class="text-zinc-600 hover:text-zinc-900">About</a></li>
+              <li><a href="/services/" class="text-zinc-600 hover:text-zinc-900">Services</a></li>
             </ul>
           </div>
 
           <div class="mt-12 md:mt-0">
             <h3 class="text-zinc-900 text-base font-medium">Content</h3>
             <ul role="list" class="mt-4 text-xs space-y-2">
-              <li><a href="/blog" class="text-zinc-600 hover:text-zinc-500">Blog</a></li>
-              <li><a href="/articles" class="text-zinc-600 hover:text-zinc-900">Articles</a></li>
+              <li><a href="/blog/" class="text-zinc-600 hover:text-zinc-500">Blog</a></li>
+              <li><a href="/articles/" class="text-zinc-600 hover:text-zinc-900">Articles</a></li>
             </ul>
           </div>
           <div class="mt-12 md:mt-0">
@@ -32,8 +32,8 @@
           <div class="mt-12 md:mt-0">
             <h3 class="text-zinc-900 text-base font-medium">Contact</h3>
             <ul role="list" class="mt-4 text-xs space-y-2">
-              <li><a href="#" class="text-zinc-600 hover:text-zinc-900">Send A Message</a></li>
-              <li><a href="#" class="text-zinc-600 hover:text-zinc-900">Book A Call</a></li>
+              <li><a href="/contact/" class="text-zinc-600 hover:text-zinc-900">Send A Message</a></li>
+              <li><a href="/contact/" class="text-zinc-600 hover:text-zinc-900">Book A Call</a></li>
             </ul>
           </div>
         </div>
