--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -50,7 +50,7 @@ const {bgimage} = Astro.props
 
         <!-- content -->
         <div class=" h-screen p-0 m-0 text-zinc-500 text-xs">
-          <iframe aria-label='Contact Form' style="height:400px; width:99%; border:none;" src='https://forms.zohopublic.com/administrator81/form/ProductReview/formperma/1SLy2_XE9PEXvFojgtAmiTZT6dLJ5GYdQ61n5p6RFKw'></iframe>
+          <iframe aria-label='Contact Form' style="height:100%; width:100%; border:none;" src='https://forms.zohopublic.com/administrator81/form/ProductReview/formperma/1SLy2_XE9PEXvFojgtAmiTZT6dLJ5GYdQ61n5p6RFKw'></iframe>
         </div>
     </div>
 </div>
