--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -40,7 +40,7 @@ import { AstroSeo } from "@astrolib/seo";
   }}
 />
 <BaseLayout>
-    <Block bgimage="img/newhero4.jpg" blockheadline="Need more info?" blockexcerpt="We got it covered!" />
+    <Block bgimage="img/newhero7a.jpg" headline="Need more info?" excerpt="We got it covered! If you have the time and want to DIY your site, you'll find everything you need to know about how to do it right, and how to do it without going broke right here." />
     <Articles />
     <Testimonials />
 </BaseLayout>
