--- a/src/components/global/Block.astro
+++ b/src/components/global/Block.astro
@@ -1,11 +1,11 @@
 ---
-const { bgimage, blockheadline, blockexcerpt } = Astro.props
+const { bgimage, headline, excerpt } = Astro.props
 ---
 <section>
     <div class="relative isolate overflow-hidden max-w-7xl mx-auto">
       <img
         src={`${bgimage}`}
-        alt={`${blockheadline}`}
+        alt={`${headline}`}
         class="absolute inset-0 -z-10 h-full w-full object-cover opacity-30"
       />
   
@@ -13,16 +13,14 @@ const { bgimage, blockheadline, blockexcerpt } = Astro.props
         <div class="text-left">
           <span class="text-xs font-bold tracking-wide uppercase text-zinc-500">The Modern Web</span>
           <p class="mt-8 text-4xl font-semibold lg:text-6xl tracking-tighter text-zinc-900">
-            {blockheadline} <span class="md:block text-zinc-500"></span>
+            {headline} <span class="md:block text-zinc-500"></span>
           </p>
-          <p class="max-w-md mt-4 text-base text-zinc-500">
-            {blockexcerpt}
-          </p>
+          <p class="max-w-md mt-4 text-base text-zinc-500">{excerpt}</p>
           <div class="flex flex-col items-center gap-3 mt-10 md:flex-row">
-            <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto"
-              href="articles/">Read Articles Here</a>
+            <a class="flex items-center justify-center w-full h-10 px-4 py-1 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto"
+              href="articles/">Contact Us Here</a>
             <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500"
-              href="services/">About our services &nbsp;→</a>
+              href="services/">About Our Services</a>
           </div>
         </div>
       </div>
