--- a/src/components/landing/Posts.astro
+++ b/src/components/landing/Posts.astro
@@ -4,11 +4,11 @@ import Card from "../../components/global/Card.astro";
 const data = await getAllPosts();
 const type = 'blog';
 ---
-<section class="mb-10">
+<div class="mb-10 max-w-7xl mx-auto">
   <div class="py-6 mx-6 lg:py-8">
     <p class="text-xs font-bold tracking-wide uppercase text-zinc-500">latest blog posts</p>
   </div>  
-  <ul class="px-6 grid md:grid-cols-4 gap-8">
+  <ul class="px-4 grid md:grid-cols-4 gap-6">
       {
         data.map((post) => (
           <Card
@@ -21,4 +21,4 @@ const type = 'blog';
         ))
       }
     </ul>
-  </section>
+  </div>
