--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -40,7 +40,7 @@ import Posts from "@/components/landing/Posts.astro";
   }}
 />
 <BaseLayout>
-    <Block bgimage="img/photo-15.jpg" blockheadline="No technical mumbo jumbo here" blockexcerpt="Just some quick tips and tricks to increase your website know how." />
+    <Block bgimage="img/photo-15.jpg" headline="No technical mumbo jumbo here" excerpt="Just some quick tips and tricks to increase your website know how." />
     <Posts />
     <Testimonials />
 </BaseLayout>
