Image updates. Still need to optimize.

--- a/src/components/global/Block.astro
+++ b/src/components/global/Block.astro
@@ -18,9 +18,9 @@ const { bgimage, headline, excerpt } = Astro.props
           <p class="max-w-md mt-4 text-base text-zinc-500">{excerpt}</p>
           <div class="flex flex-col items-center gap-3 mt-10 md:flex-row">
             <a class="flex items-center justify-center w-full h-10 px-4 py-1 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto"
-              href="articles/">Contact Us Here</a>
+              href="/contact/">Contact Us Here</a>
             <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500"
-              href="services/">About Our Services</a>
+              href="/services/">About Our Services</a>
           </div>
         </div>
       </div>
