--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -2,7 +2,7 @@
   <div class="px-8 py-12 mx-auto md:px-12 lg:px-32 max-w-7xl lg:py-12">
     <div class="xl:grid xl:grid-cols-3 xl:gap-8 items-start">
       <div class="inline-flex items-center gap-3 text-xl font-bold tracking-tight text-zinc-900">
-        <a class="inline-flex items-center gap-0" href="/"><img src="img/logo.png" /></a>
+        <a class="inline-flex items-center gap-0" href="/"><img src="img/logo2.png" /></a>
       </div>
       <div class="gap-8 xl:col-span-2 lg:ml-auto">
         <div class="md:grid md:grid-cols-2 lg:grid-cols-4 md:gap-8 lg:gap-20">
