--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import Articles from "@/components/landing/Articles.astro";
   }}
 />
 <BaseLayout>
-  <Hero bgimage="newhero4.jpg" />
+  <Hero bgimage="newhero7a.jpg" />
   <Features />
   <Testimonials />
   <Posts />
