Finished modal, added 2nd hero component.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "@/layouts/BaseLayout.astro";
-import Hero from "@/components/landing/Hero.astro";
+import Hero1 from "@/components/landing/Hero1.astro";
 import Features from "@/components/landing/Features.astro";
 import Testimonials from "@/components/landing/Testimonials.astro";
 import Pricing from "@/components/landing/Pricing.astro";
@@ -42,7 +42,7 @@ import Articles from "@/components/landing/Articles.astro";
   }}
 />
 <BaseLayout>
-  <Hero bgimage="newhero7a.jpg" />
+  <Hero1 bgimage="newhero7a.jpg" />
   <Features />
   <Testimonials />
   <Posts />
