--- a/src/components/landing/Hero1.astro
+++ b/src/components/landing/Hero1.astro
@@ -20,8 +20,8 @@ const {bgimage} = Astro.props
           Mobile-responsive, highly interactive, highly available and most importantly, extremely affordable.
         </p>
         <div class="flex flex-col items-center gap-3 mt-10 md:flex-row">
-          <a @click="showModal2 = true" class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500" href="javascript:;">Book A Call</a>
-          <a @click="showModal = true" class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500" href="javascript:;">Send A Message &nbsp; →</a>
+          <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm font-semibold text-white transition-all rounded-lg bg-gradient-to-b from-zinc-500 hover:to-zinc-700 to-zinc-600 md:w-auto" href="contact/">You Don't Have One?</a>
+          <a class="flex items-center justify-center w-full h-10 px-4 py-2 text-sm transition-all bg-white border border-zinc-300 rounded-lg md:w-auto md:font-semibold text-zinc-600 hover:text-zinc-500" href="services/">About Our Services</a>
         </div>
         
         <!-- Modal -->
