Major overhaul - remove AstroSEO, upgrade Astro, meta for blog, pages, articles

--- a/src/pages/articles/[slug].astro
+++ b/src/pages/articles/[slug].astro
@@ -1,7 +1,6 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import { getAllArticles } from "../../lib/cosmic"
-import { AstroSeo } from "@astrolib/seo";
 
 export async function getStaticPaths() {
   const response = await getAllArticles()
@@ -15,11 +14,10 @@ export async function getStaticPaths() {
 }
 const { article } = Astro.props;
 ---
-<AstroSeo
+<BaseLayout 
 title={article.title}
 description={article.metadata.article_meta.article_description}
-/>
-<BaseLayout>
+>
     <Fragment set:html={article.metadata.article_content} />
   </BaseLayout>
 
