--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,8 +1,16 @@
-
+---
+const { title, description, keywords, robots } = Astro.props;
+---
 <meta charset="utf-8" />
 <base href={import.meta.env.SITE}>
 <link rel="canonical" href={Astro.request.url}>
-<meta name="viewport" content="width=device-width" />
+
+<title>{ title }</title>
+
+<meta name="description" content={ description } />
+<meta name="keywords" content={ keywords } />
+<meta name="robots" content={ robots } />
+
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="author" content="Mike Alberts" />
