--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,11 +2,19 @@
 import BaseHead from "@/components/BaseHead.astro";
 import Navigation from "@/components/global/Navigation.astro";
 import Footer from "@/components/global/Footer.astro";
+
+const { title, description, keywords, robots } = Astro.props;
 ---
 
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <BaseHead />
+    <BaseHead
+    title={title}
+    description={description}
+    keywords={keywords}
+    robots={robots}
+    />
   </head>
 
   <body class="bg-smoke">
