--- a/src/pages/articles/index.astro
+++ b/src/pages/articles/index.astro
@@ -3,43 +3,12 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
 import Block from "../../components/global/Block.astro";
 import Articles from "../../components/landing/Articles.astro"
 import Testimonials from "../../components/landing/Testimonials.astro";
-import { AstroSeo } from "@astrolib/seo";
 ---
-<AstroSeo
-  title="Rule The Web | Articles"
-  description="Easy to understand quick guides regarding web presence topics with a focus on what's impoertant from a business owner's perspective."
-  canonical={import.meta.env.SITE}
-  openGraph={{
-    url: "https://streamer.lexingtonthemes.com",
-    title: "Open Graph Title",
-    description: "Open Graph Description",
-    images: [
-      {
-        url: "https://www.lexingtonthemes.com/opengraph/social-og.jpg",
-        width: 1200,
-        height: 630,
-        alt: "Social open graph",
-        type: "image/jpeg",
-      },
-      {
-        url: "https://www.lexingtonthemes.com/opengraph/twitter-og.jpg",
-        width: 4096,
-        height: 4096,
-        alt: "Twitter open graph",
-        type: "image/jpeg",
-      },
-      { url: "https://www.lexingtonthemes.com/opengraph/social-og.jpg" },
-      { url: "https://www.lexingtonthemes.com/opengraph/twitter-og.jpg" },
-    ],
-    site_name: "Rule The Web",
-  }}
-  twitter={{
-    handle: "@TwitterHandle",
-    site: "@site",
-    cardType: "summary_large_image",
-  }}
-/>
-<BaseLayout>
+<BaseLayout 
+title="Rule The Web | Articles"
+description="Easy to understand quick guides regarding web presence topics with a focus on what's impoertant from a business owner's perspective."
+keywords=""
+robots="index, follow">
     <Block bgimage="img/newhero8.jpg" headline="Need more info?" excerpt="We got it covered! If you have the time and want to DIY your site, you'll find everything you need to know about how to do it right, and how to do it without going broke right here." />
     <Articles />
     <Testimonials />
