--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,45 +3,16 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 import Hero1 from "@/components/landing/Hero1.astro";
 import Features from "@/components/landing/Features.astro";
 import Testimonials from "@/components/landing/Testimonials.astro";
-import Pricing from "@/components/landing/Pricing.astro";
-import { AstroSeo } from "@astrolib/seo";
 import Posts from "../components/landing/Posts.astro";
 import Articles from "@/components/landing/Articles.astro";
+import Pricing from "@/components/landing/Pricing.astro";
 ---
-<AstroSeo
-  title="Rule The Web | Home"
-  description="A completely functional Astro static site generator with Tailwind, AstroSEO, CosmicJS CMS for blog, article and page management."
-  openGraph={{
-    url: "https://streamer.lexingtonthemes.com",
-    title: "Open Graph Title",
-    description: "Open Graph Description",
-    images: [
-      {
-        url: "https://www.lexingtonthemes.com/opengraph/social-og.jpg",
-        width: 1200,
-        height: 630,
-        alt: "Social open graph",
-        type: "image/jpeg",
-      },
-      {
-        url: "https://www.lexingtonthemes.com/opengraph/twitter-og.jpg",
-        width: 4096,
-        height: 4096,
-        alt: "Twitter open graph",
-        type: "image/jpeg",
-      },
-      { url: "https://www.lexingtonthemes.com/opengraph/social-og.jpg" },
-      { url: "https://www.lexingtonthemes.com/opengraph/twitter-og.jpg" },
-    ],
-    site_name: "Rule The Web",
-  }}
-  twitter={{
-    handle: "@TwitterHandle",
-    site: "@site",
-    cardType: "summary_large_image",
-  }}
-/>
-<BaseLayout>
+<BaseLayout
+title="Rule The Web | Home"
+description="home page description"
+keywords="keywords, keywords, keywords"
+robots="index,follow"
+>
   <Hero1 bgimage="newhero7a.jpg" />
   <Features />
   <Testimonials />
